--- a/app/src/main/res/layout/fragment_my_favorite.xml
+++ b/app/src/main/res/layout/fragment_my_favorite.xml
@@ -1,134 +1,267 @@
-<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<com.scwang.smart.refresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    app:srlDragRate="0.3"
-    app:srlEnableLoadMore="true"
-    app:srlEnablePureScrollMode="true"
     tools:context=".ui.favorite.MyFavoriteFragment"
     tools:ignore="spUsage">
 
-    <androidx.core.widget.NestedScrollView
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:overScrollMode="never">
+        android:layout_height="wrap_content"
+        android:background="@color/transparent"
+        app:elevation="0dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorWhite">
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/favorite_toolbar"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:background="@color/colorWhite"
-                android:visibility="invisible"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="visible">
+                android:orientation="vertical">
 
-                <TextView
-                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/favorite_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@color/colorWhite"
+                    android:visibility="invisible"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:visibility="visible">
+
+                    <TextView
+                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/my_favorite"
+                        android:textColor="@color/colorBlackLight"
+                        android:textSize="@dimen/textSize16sp" />
+
+                </androidx.appcompat.widget.Toolbar>
+
+                <ImageView
+                    android:id="@+id/favorite_bg_layer2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="@id/ll_favorite_game_type_title"
+                    app:layout_constraintTop_toTopOf="@id/favorite_game_type_list"
+                    tools:ignore="ContentDescription"
+                    tools:src="@drawable/soccer108" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/favorite_game_type_list"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/my_favorite"
-                    android:textColor="@color/colorBlackLight"
-                    android:textSize="@dimen/textSize16sp" />
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:padding="10dp"
+                    android:overScrollMode="never"
+                    android:nestedScrollingEnabled="false"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/favorite_toolbar"
+                    tools:itemCount="1"
+                    tools:listitem="@layout/itemview_sport_type_v5" />
 
-            </androidx.appcompat.widget.Toolbar>
-
-            <ImageView
-                android:id="@+id/favorite_bg_layer2"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintBottom_toBottomOf="@id/ll_favorite_game_type_title"
-                app:layout_constraintTop_toTopOf="@id/favorite_game_type_list"
-                tools:ignore="ContentDescription"
-                tools:src="@drawable/soccer108" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/favorite_game_type_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"
-                android:padding="10dp"
-                android:overScrollMode="never"
-                android:nestedScrollingEnabled="false"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/favorite_toolbar"
-                tools:itemCount="1"
-                tools:listitem="@layout/itemview_sport_type_v5" />
-
-            <LinearLayout
-                android:id="@+id/ll_favorite_game_type_title"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:gravity="center"
-                app:layout_constraintTop_toBottomOf="@id/favorite_game_type_list">
-
-                <TextView
-                    android:id="@+id/favorite_game_type"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:id="@+id/ll_favorite_game_type_title"
+                    android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:gravity="center"
-                    android:textColor="@color/colorBlackLight"
-                    android:textSize="@dimen/textSize18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintTop_toBottomOf="@id/favorite_game_type_list"
-                    tools:text="网球" />
+                    app:layout_constraintTop_toBottomOf="@id/favorite_game_type_list">
 
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/favorite_game_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="48dp"
+                        android:gravity="center"
+                        android:textColor="@color/colorBlackLight"
+                        android:textSize="@dimen/textSize18sp"
+                        android:textStyle="bold"
+                        app:layout_constraintTop_toBottomOf="@id/favorite_game_type_list"
+                        tools:text="网球" />
 
+                </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/favorite_play_category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
-                android:paddingStart="16dp"
-                android:paddingTop="10dp"
-                android:paddingEnd="16dp"
-                android:paddingBottom="10dp"
-                android:overScrollMode="never"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ll_favorite_game_type_title"
-                tools:itemCount="1"
-                tools:listitem="@layout/itemview_play_category_v4" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/favorite_play_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"
+                    android:paddingStart="16dp"
+                    android:paddingTop="10dp"
+                    android:paddingEnd="16dp"
+                    android:paddingBottom="10dp"
+                    android:overScrollMode="never"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/ll_favorite_game_type_title"
+                    tools:itemCount="1"
+                    tools:listitem="@layout/itemview_play_category_v4" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/favorite_game_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
-                android:overScrollMode="never"
-                app:layout_constraintTop_toBottomOf="@id/favorite_play_category"
-                tools:itemCount="1"
-                tools:listitem="@layout/itemview_league_v5" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <FrameLayout
-                android:id="@+id/fl_no_game"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:background="@color/colorWhite"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/favorite_toolbar"
-                tools:visibility="visible">
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-                <include layout="@layout/view_no_game" />
-            </FrameLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout android:id="@+id/gameContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:animateLayoutChanges="true">
 
-    </androidx.core.widget.NestedScrollView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/favorite_game_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:overScrollMode="never"
+            app:layout_constraintTop_toBottomOf="@id/favorite_play_category"
+            tools:itemCount="1"
+            tools:listitem="@layout/itemview_league_v5" />
 
-</com.scwang.smart.refresh.layout.SmartRefreshLayout>
+        <FrameLayout
+            android:id="@+id/fl_no_game"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/colorWhite"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/favorite_toolbar"
+            tools:visibility="visible">
+
+            <include layout="@layout/view_no_game" />
+
+        </FrameLayout>
+
+    </FrameLayout>
+
+<!--    <androidx.core.widget.NestedScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:fillViewport="true"-->
+<!--        android:overScrollMode="never">-->
+
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="@color/colorWhite">-->
+
+<!--            <androidx.appcompat.widget.Toolbar-->
+<!--                android:id="@+id/favorite_toolbar"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="48dp"-->
+<!--                android:background="@color/colorWhite"-->
+<!--                android:visibility="invisible"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                tools:visibility="visible">-->
+
+<!--                <TextView-->
+<!--                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:text="@string/my_favorite"-->
+<!--                    android:textColor="@color/colorBlackLight"-->
+<!--                    android:textSize="@dimen/textSize16sp" />-->
+
+<!--            </androidx.appcompat.widget.Toolbar>-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/favorite_bg_layer2"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:scaleType="centerCrop"-->
+<!--                app:layout_constraintBottom_toBottomOf="@id/ll_favorite_game_type_title"-->
+<!--                app:layout_constraintTop_toTopOf="@id/favorite_game_type_list"-->
+<!--                tools:ignore="ContentDescription"-->
+<!--                tools:src="@drawable/soccer108" />-->
+
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/favorite_game_type_list"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="2dp"-->
+<!--                android:layout_marginBottom="2dp"-->
+<!--                android:padding="10dp"-->
+<!--                android:overScrollMode="never"-->
+<!--                android:nestedScrollingEnabled="false"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/favorite_toolbar"-->
+<!--                tools:itemCount="1"-->
+<!--                tools:listitem="@layout/itemview_sport_type_v5" />-->
+
+<!--            <LinearLayout-->
+<!--                android:id="@+id/ll_favorite_game_type_title"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="48dp"-->
+<!--                android:gravity="center"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/favorite_game_type_list">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/favorite_game_type"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="48dp"-->
+<!--                    android:gravity="center"-->
+<!--                    android:textColor="@color/colorBlackLight"-->
+<!--                    android:textSize="@dimen/textSize18sp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    app:layout_constraintTop_toBottomOf="@id/favorite_game_type_list"-->
+<!--                    tools:text="网球" />-->
+
+<!--            </LinearLayout>-->
+<!--            -->
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/favorite_play_category"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:nestedScrollingEnabled="false"-->
+<!--                android:paddingStart="16dp"-->
+<!--                android:paddingTop="10dp"-->
+<!--                android:paddingEnd="16dp"-->
+<!--                android:paddingBottom="10dp"-->
+<!--                android:overScrollMode="never"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/ll_favorite_game_type_title"-->
+<!--                tools:itemCount="1"-->
+<!--                tools:listitem="@layout/itemview_play_category_v4" />-->
+
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/favorite_game_list"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:nestedScrollingEnabled="false"-->
+<!--                android:overScrollMode="never"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/favorite_play_category"-->
+<!--                tools:itemCount="1"-->
+<!--                tools:listitem="@layout/itemview_league_v5" />-->
+
+<!--            <FrameLayout-->
+<!--                android:id="@+id/fl_no_game"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:background="@color/colorWhite"-->
+<!--                android:visibility="invisible"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/favorite_toolbar"-->
+<!--                tools:visibility="visible">-->
+
+<!--                <include layout="@layout/view_no_game" />-->
+<!--            </FrameLayout>-->
+
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--    </androidx.core.widget.NestedScrollView>-->
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
