--- a/app/src/main/res/layout/fragment_transaction_status.xml
+++ b/app/src/main/res/layout/fragment_transaction_status.xml
@@ -82,7 +82,7 @@
                     android:id="@+id/game_type_selector"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginVertical="8dp"
                     android:layout_weight="1"
                     app:arrowSrc="@drawable/ic_arrow_color_gray"
