--- a/app/src/main/res/layout/item_outright_result_outright.xml
+++ b/app/src/main/res/layout/item_outright_result_outright.xml
@@ -2,28 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
     android:background="@color/color_191919_FCFCFC"
     android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:divider="@drawable/divider_color_white6"
-        android:gravity="center"
         android:orientation="horizontal"
         android:showDividers="middle">
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             android:orientation="vertical"
-            android:paddingStart="8dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="8dp">
+            android:padding="12dp">
 
             <TextView
                 android:id="@+id/tv_date"
@@ -40,7 +36,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/color_e5e5e5_333333"
                 tools:text="冠軍"
-                android:textSize="@dimen/textSize12sp" />
+                android:textSize="@dimen/textSize12sp"
+                android:layout_marginTop="6dp"/>
         </LinearLayout>
 
 
@@ -50,7 +47,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:layout_gravity="center"
             android:textColor="@color/color_e5e5e5_333333"
+            android:textStyle="bold"
             android:textSize="@dimen/textSize14sp"
             android:padding="8dp"
             tools:text="Bodo/Glimt" />
