--- a/app/src/main/res/layout/dialog_combo_detail.xml
+++ b/app/src/main/res/layout/dialog_combo_detail.xml
@@ -36,9 +36,10 @@
 
         <ImageView
             android:id="@+id/btn_close"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
             android:layout_marginEnd="15dp"
+            android:padding="6dp"
             android:src="@drawable/icon_close_gray_12"
             app:layout_constraintBottom_toBottomOf="@+id/tv_title"
             app:layout_constraintEnd_toEndOf="parent"
