--- a/app/src/main/res/layout/item_parlay_combo_detail.xml
+++ b/app/src/main/res/layout/item_parlay_combo_detail.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
-                android:gravity="center"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
@@ -51,6 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constrainedWidth="true"
@@ -65,6 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constrainedWidth="true"
@@ -81,6 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:gravity="center"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constrainedWidth="true"
