--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v2.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v2.xml
@@ -135,7 +135,7 @@
                         android:layout_weight="6"
                         android:background="@drawable/effect_select_bet_edit_text_fill_color_white"
                         android:hint="@string/bet_info_input_quota"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:letterSpacing="0.05"
                         android:maxLength="7"
                         android:paddingStart="10dp"
