--- a/app/src/main/res/drawable/button_radius_5_0760d4.xml
+++ b/app/src/main/res/drawable/button_radius_5_0760d4.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="5dp" />
-    <solid android:color="#ff0f53af"/>
+    <solid android:color="#0760D4"/>
 </shape>
