--- a/app/src/main/res/drawable/button_radius_4_117ecd_1053af.xml
+++ b/app/src/main/res/drawable/button_radius_4_117ecd_1053af.xml
@@ -4,6 +4,6 @@
     <corners android:radius="5dp" />
     <gradient
         android:angle="180"
-        android:endColor="#117ECD"
-        android:startColor="#1053AF" />
+        android:endColor="#0760D4"
+        android:startColor="#0760D4" />
 </shape>
