--- a/app/src/main/res/layout/itemview_outright_league_v4.xml
+++ b/app/src/main/res/layout/itemview_outright_league_v4.xml
@@ -23,7 +23,6 @@
             android:lineSpacingExtra="4dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:textAllCaps="true"
             android:textColor="@color/color_e5e5e5_333333"
             android:textSize="@dimen/textSize16sp"
             android:textStyle="bold"
@@ -32,7 +31,7 @@
             app:layout_constraintStart_toStartOf="@id/outright_info_block"
             app:layout_constraintTop_toTopOf="@id/outright_info_block"
             app:layout_constraintVertical_chainStyle="spread"
-            tools:text="欧洲冠军杯2020/2021asdasdasdasdsadsadasdsdafsadfsdafsadfasfdasfsdafadsfdsafasdfasfasdafadsfasf" />
+            tools:text="欧洲冠军杯2020/2021" />
 
         <TextView
             android:id="@+id/outright_league_date"
