--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -7,13 +7,14 @@
     android:layout_height="match_parent"
     android:overScrollMode="never"
     android:background="@color/color_141414_F3F4F5"
+    android:paddingBottom="15dp"
     tools:context=".ui.money.recharge.TransferPayFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="14dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_bank"
