--- a/app/src/main/res/layout/item_account_history_next_content.xml
+++ b/app/src/main/res/layout/item_account_history_next_content.xml
@@ -37,11 +37,12 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@{matchOdd.leagueName}"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize14sp"
+                app:layout_constraintBottom_toTopOf="@id/tv_team_home"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/tv_team_home"
                 tools:text="NBA季后赛" />
 
 
@@ -51,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:text="@{matchOdd.homeName}"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_0C2040_a9bedf"
                 android:textSize="@dimen/textSize14sp"
                 app:layout_constraintBottom_toTopOf="@id/text_view"
@@ -78,6 +80,7 @@
                 android:layout_marginHorizontal="6dp"
                 android:gravity="start"
                 android:text="@{matchOdd.awayName}"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_0C2040_a9bedf"
                 android:textSize="@dimen/textSize14sp"
                 app:layout_constraintBottom_toBottomOf="@id/text_view"
@@ -125,6 +128,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
                 android:maxWidth="200dp"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constraintEnd_toStartOf="@+id/list_score"
@@ -141,6 +145,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
                 android:maxWidth="200dp"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constraintEnd_toStartOf="@+id/list_score"
@@ -151,7 +156,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_score"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:overScrollMode="never"
                 android:scrollbars="none"
@@ -164,11 +169,12 @@
 
             <TextView
                 android:id="@+id/tv_score"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:textAlignment="viewEnd"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
-                android:layout_marginTop="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/list_score"
                 app:layout_constraintTop_toBottomOf="@id/list_score"
@@ -195,6 +201,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/bet_info_list_bet_quota"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -205,6 +212,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constraintEnd_toStartOf="@+id/tv_win_lose"
@@ -220,6 +228,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/win_lose_mark"
+                android:textAlignment="viewEnd"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
                 app:hideByStatus="@{row.status}"
@@ -245,6 +254,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:textAlignment="viewEnd"
                 android:textSize="@dimen/textSize12sp"
                 app:hideByStatus="@{row.status}"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -260,6 +270,7 @@
                 android:layout_marginTop="4dp"
                 android:gravity="center"
                 android:text="@{row.orderNo}"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_8F8F8F_999999"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -274,6 +285,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:textAlignment="viewEnd"
                 android:textColor="@color/color_8F8F8F_999999"
                 android:textSize="@dimen/textSize12sp"
                 app:dateTimeNoYear="@{row.addTime}"
