--- a/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
@@ -36,9 +36,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:gravity="start"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize14sp"
-                android:textStyle="bold"
                 app:gameType="@{gameType}"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintEnd_toStartOf="@id/list_score"
@@ -54,6 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{matchOdd.leagueName}"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize13sp"
                 app:layout_constrainedWidth="true"
@@ -65,7 +66,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_score"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:overScrollMode="never"
                 android:scrollbars="none"
@@ -77,8 +78,9 @@
 
             <TextView
                 android:id="@+id/tv_score"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
+                android:textAlignment="viewEnd"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -93,6 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constrainedWidth="true"
@@ -107,6 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constrainedWidth="true"
@@ -123,6 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:gravity="center"
+                android:textAlignment="viewStart"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constrainedWidth="true"
