--- a/app/src/main/res/layout/item_parlay_combo_detail.xml
+++ b/app/src/main/res/layout/item_parlay_combo_detail.xml
@@ -19,28 +19,25 @@
 
             <TextView
                 android:id="@+id/tvLeagueName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
+                android:layout_marginRight="55dp"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@id/tvScore"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintRight_toLeftOf="@+id/tvScore"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="篮球" />
 
             <TextView
                 android:id="@+id/tvScore"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
+                android:textAlignment="viewEnd"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
-                app:layout_constrainedWidth="true"
-                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="999-999" />
@@ -82,7 +79,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
-                android:gravity="center"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
